resources/css/sass/app.scss
@use './components';
@use './abstracts';
@use './pages';


.show-mobile{
    display: none;
}
.mb-0{
    margin-bottom: 0 !important;
}
.text-align-center{
    text-align: center !important;
}
@media (max-width: 768px) {
    .mobile-hide {
        display: none !important;
    }
    .show-mobile {
        display: block;
    }
    .mobile-mb-0{
        margin-bottom: 0 !important;
    }
    .mobile-mb-200{
        margin-bottom: 200px !important;
    }
    .mobile-mb-250{
        margin-bottom: 250px !important;
    }
    .mobile-mb-300{
        margin-bottom: 300px !important;
    }
}

